--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,10 +48,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation 'com.hbb20:ccp:2.5.0'           // Country Code Picker
-    implementation 'io.github.chaosleung:pinview:1.4.4'  // OTP Verification
-    implementation("com.tbuonomo:dotsindicator:4.3")
+    implementation 'com.hbb20:ccp:2.5.0'                    // Country Code Picker
+    implementation 'io.github.chaosleung:pinview:1.4.4'     // OTP Verification
+    implementation("com.tbuonomo:dotsindicator:4.3")        // Dot Indicator
+    implementation 'de.hdodenhof:circleimageview:3.1.0'     // Circular Imageview
 
+    // Navigation
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
