--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:theme="@style/Theme.TheMovieBookingApp"
         tools:targetApi="31">
         <activity
-            android:name=".ui.activities.MainActivity"
-            android:exported="false">
+            android:name=".ui.activities.MainActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
