--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-android-extensions'
     id("androidx.navigation.safeargs")
-
+    id 'kotlin-kapt'
 }
 
 android {
@@ -52,9 +52,34 @@ dependencies {
     implementation 'io.github.chaosleung:pinview:1.4.4'     // OTP Verification
     implementation("com.tbuonomo:dotsindicator:4.3")        // Dot Indicator
     implementation 'de.hdodenhof:circleimageview:3.1.0'     // Circular Imageview
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'   // Swipe Refresh Layout
 
     // Navigation
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
+    // Retrofit
+    implementation("com.squareup.okhttp3:okhttp:4.10.0")
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
+
+    // Logging Interceptor
+    implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
+
+    // Room
+    def room_version = "2.5.0"
+    implementation("androidx.room:room-common:$room_version")
+    implementation("androidx.room:room-ktx:$room_version")
+    kapt("androidx.room:room-compiler:$room_version")
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+
+    // Work Manager
+    def work_version = "2.8.0"
+    implementation("androidx.work:work-runtime-ktx:$work_version")
+
+    // Android Youtube Player
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:11.1.0'
 }
