--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation("com.tbuonomo:dotsindicator:4.3")        // Dot Indicator
     implementation 'de.hdodenhof:circleimageview:3.1.0'     // Circular Imageview
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'   // Swipe Refresh Layout
+    implementation("com.otaliastudios:zoomlayout:1.9.0")                    // Zoom Layout
 
     // Navigation
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
