--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.10.0")
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0"
 
     // Logging Interceptor
     implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
